Fix link tap background color on mobile browsers

--- a/src/index.sass
+++ b/src/index.sass
@@ -61,6 +61,13 @@ a
 *
   -webkit-font-smoothing: antialiased
   box-sizing: border-box
+  -webkit-touch-callout: none
+  -webkit-user-select: none
+  -khtml-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
+  user-select: none
+  -webkit-tap-highlight-color: transparent
 
 img, svg
   vertical-align: middle
